@@ -34,6 +34,7 @@ JavaApplicationProject.xpt.xml \
 JavaConsoleApplicationProject.xpt.xml \
 Library.xpt.xml \
 NemerleEmptyProject.xpt.xml \
+NemerleGnomeSharpProject.xpt.xml \
 NemerleGtkSharpProject.xpt.xml \
 NemerleGtkSharpWindow.xft.xml \
 AppConfigFile.xft.xml \
