@@ -1,58 +1,63 @@
 <?xml version="1.0"?>
-<Template originator   = "Pawel Rozanski"
-          created      = "07/08/2004"
-          lastModified = "11/20/2004">
-
+<Template originator   = "John Luke"
+          created      = "01/03/2004"
+          lastModified = "03/08/2004">
+	
 	<!-- Template Header -->
 	<TemplateConfiguration>
-		<_Name>Gtk# Project</_Name>
+		<_Name>Gnome# Project</_Name>
 		<Category>Nemerle</Category>
 		<Icon>Nemerle.Project.Form</Icon>
 		<LanguageName>Nemerle</LanguageName>
-		<_Description>Creates a Nemerle/Gtk# project</_Description>
+		<_Description>Creates a Nemerle/Gnome# project</_Description>
 	</TemplateConfiguration>
 	
+	<!-- Actions -->
 	<Actions>
 		<Open filename = "Main.n"/>
-	</Actions>	
+	</Actions>
 	
+	<!-- Template Content -->
 	<Combine name = "${ProjectName}" directory = ".">
 		<Options>
 			<StartupProject>${ProjectName}</StartupProject>
 		</Options>
 		
 		<Project name = "${ProjectName}" directory = ".">
+			<Options/>
+			
 			<References>
-				<Reference type="Gac" refto="gtk-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+				<Reference type="Gac" refto="gnome-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
 			</References>
+
 			<Files>
 				<File name="Main.n"><![CDATA[// project created on ${Date} at ${Time}
 using System;
-using Gtk;
 
-module Main
+public class MainClass
 {
-	public Main() : void
+	public static Main (args : array[string]) : void
 	{
-		Application.Init();
-		_ = MyWindow();
-		Application.Run();
+		_ = MyProgram (args);
 	}
 }]]></File>
-				<File name="MyWindow.n"><![CDATA[using System;
+			<File name="MyProgram.n"><![CDATA[using System;
 using Gtk;
+using Gnome;
 
-public class MyWindow : Window
+public class MyProgram
 {
-	public this() 
+	public this (args : array[string])
 	{
-		base("MyWindow");
-		SetDefaultSize(400, 300);
-		this.DeleteEvent += (fun (_) { Application.Quit ();} );
-		ShowAll();
+		def program = Program ("MyProgram", "0.0", Modules.UI, args);
+		def app = App ("MyProgram", "MyWindow");
+		app.SetDefaultSize (400, 300);
+		app.DeleteEvent += (fun (_) { Application.Quit ();} );
+		app.ShowAll ();
+		program.Run ();
 	}
 }]]></File>
-				<File name="AssemblyInfo.n"><![CDATA[using System.Reflection;
+			<File name="AssemblyInfo.n"><![CDATA[using System.Reflection;
 using System.Runtime.CompilerServices;
 
 // Information about this assembly is defined by the following
@@ -86,7 +91,6 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyKeyFile("")]
 ]]></File>
 			</Files>
-
 		</Project>
 	</Combine>
 </Template>
