@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <Template Originator   = "Pawel Rozanski"
-	  Language     = "Nemerle"
+          Language     = "Nemerle"
           Created      = "07/08/2004"
           LastModified = "07/08/2004">
 	  
