@@ -1,3 +1,14 @@
+2004-11-20  Pawel Rozanski  <tokugawa@nemerle.org>
+
+	* AddIns/BackendBindings/NemerleBinding.addin.xml:
+	* AddIns/BackendBindings/templates/NemerleGtkSharpWindow.xft.xml:
+	* AddIns/BackendBindings/templates/NemerleGtkSharpProject.xpt.xml:
+	add AssemblyInfo.n to template.
+
+	* AddIns/BackendBindings/templates/Makefile.am:
+	* AddIns/BackendBindings/templates/NemerleGnomeSharpProject.xpt.xml:
+	add new template for nemerle.
+
 2004-07-08  Pawel Rozanski  <tokugawa@afn.no-ip.org>
 
 	* AddIns/BackendBindings/templates/EmptyNemerleFile.xft.xml:
